Fri Mar 24 17:56:41 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a NetClient interface for remote matchers

	* Implemented ProgClient as a convenient test implementation

	* Added an OmNetworkError exception class

	* Documentation doesn't get built by default

Fri Mar 24 17:39:37 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added OmDocumentParams class, to provide opaque but clean way
	  to give parameters to OmDocument constructor.

	* Cleaned up various OmLock mutexes; made them private and made the
	  classes lock them when public methods are called, rather than
	  expecting the calling class to lock them.

	* Now follow policy of not calling public methods from within
	  same class.

	* Added many documentation comments, mainly to API code, but also
	  generally.

Fri Mar 24 13:41:17 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added net/ directory with (very) start of remote match code.

Thu Mar 23 15:00:54 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* MultiMatch now takes care of its own StatsGatherer

	* MultiMatch now owns the RSet and SingleMatch objects given
	  to it, and will delete them.

Thu Mar 23 12:49:03 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed OmKey to use a string rather than an integer for the
	  key value.

	* Added ability for DA and DB databases to read keys from a fast
	  access separate keyfile, falling back to reading from the record 
	  if the keyfile isn't present, or doesn't contain enough keys.

	* Changed parameters for DA and DB database slightly.  Change is
	  backwards compatible.

Wed Mar 22 18:39:03 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added configure option to turn on profiling.

Tue Mar 21 15:41:49 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Tidy up structure of LeafMatch a great deal.

	* Fix bug causing a segfault when a term which doesn't exist comprises
	  the entire query.
